--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -3,19 +3,27 @@
   <!-- logged out menu -->
   <ion-menu id="loggedOutMenu" [content]="content">
 
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
 
     <ion-content class="outer-content">
-
-      <ion-list>
-        <ion-list-header>
-          Navigate
-        </ion-list-header>
-        <button ion-item menuClose *ngFor="let p of appPages" (click)="openPage(p)">
+      <ion-grid>
+        <ion-row center>
+          <ion-col class="spark-col">
+            <img class="spark-img" src="assets/img/tuto.png">
+          </ion-col>
+          <ion-col class="info-col">
+            <ion-label>Tutosite</ion-label>
+            <ion-label class="sub">Version 0.0.1</ion-label>
+            <ion-label class="sub">Esvin Estrada</ion-label>
+          </ion-col>
+          <ion-col class="button-col">
+            <button ion-button clear class="menu-button">
+              <ion-icon name="settings"></ion-icon>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-list no-lines>
+        <button ion-item menuClose *ngFor="let p of appLinks" (click)="openPage(p)">
           <ion-icon item-start [name]="p.icon" [color]="isActive(p)"></ion-icon>
           {{p.title}}
         </button>
