--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,6 +38,14 @@ $colors: (
   vimeo:      #23b6ea,
   facebook:   #3b5998
 );
+$tutosite: (
+  gris-menu: #eaeaea,
+  gris-texto: #737373,
+  color-texto: #3b3b3b,
+  notif-rojo: #e62b1e
+
+);
+$menu-w: 270px;
 
 
 // App iOS Variables
@@ -55,6 +63,7 @@ $toolbar-md-background:                   color($colors, primary);
 
 // Change the color of the segment button text
 $toolbar-md-active-color:                 #fff;
+
 
 
 // App Windows Variables
